# TAMU_ROVm

./: .gitignore  2018-05-15-18-16-34.bag  LICENSE  README.md  RosBag2Mat.mat  param_description.mat  rov_cm.mat  rov_cm_comp.mat  rov_control.mat
ExternalTry/: ExtBlock.mo  ExtCall.mo  ExtCircuit.mo  package.mo  package.order
ExternalTry/ROSConnectTry/: ROSBasedBlock_Array.mo  ROSBasedSim.mo  ROSClientCall.mo  ROSClientCall_Array.mo  package.order
ExternalTry/ROVExtTry/: ExtPropTest.mo  ExtPropTest6.mo  PropControl.mo  PropSignal6.c  PropSignal6.mo
ExternalTry/Resources/: ExtCall.c  ROSClientCall.c  ROSClientCall_3.c  ROSClientDo
IPCtry/: fifo_writer.c
Old/: OMPython
Old/ExternalPack/: ExternalLibraries.mo  ExternalLibraries.mos  package.mo
Old/ExternalTry/ROSConnectTry/: ROSBasedBlock.mo  ROSBasedBlock_Array.mo  ROSBasedSim_Array.mo  ROSClientCall_Array_U.mo  package.mo  package.order
Old/ExternalTry/ROVExtTry/: PropControl6.mo  PropSignal.c  PropSignal.mo  VectorPropTest2.mo  package.mo  package.order
Old/ExternalTry/Resources/: ROSClientCall_2.c  ROSClientCall_Array.c  ROSClientCall_Array_U.c  ROSClientRunner.c
Old/IPCtry/: fifo_reader.c  tcp_client.c  tcp_server.c
Old/UBody/: UBody.mo
Old/UWBody/: World.mo  package.mo
Old/UWBody/Examples/: package.mo
Old/UWBody/Forces/: Damper.mo  Force.mo  ForceAndTorque.mo  LineForceWithMass.mo  LineForceWithTwoMasses.mo  Spring.mo  SpringDamperParallel.mo  SpringDamperSeries.mo  Torque.mo  WorldForce.mo  WorldForceAndTorque.mo  WorldTorque.mo  package.mo
Old/UWBody/Frames/: Orientation.mo  absoluteRotation.mo  angularVelocity1.mo  angularVelocity2.mo  axesRotations.mo  axesRotationsAngles.mo  axis.mo  axisRotation.mo  from_Q.mo  from_T.mo  from_T2.mo  from_T_inv.mo  from_nxy.mo  from_nxz.mo  inverseRotation.mo  nullRotation.mo  orientationConstraint.mo  package.mo  planarRotation.mo  planarRotationAngle.mo  relativeRotation.mo  resolve1.mo  resolve2.mo  resolveDyade1.mo  resolveDyade2.mo  resolveRelative.mo  smallRotation.mo  to_Q.mo  to_T.mo  to_T_inv.mo  to_exy.mo  to_vector.mo
Old/UWBody/Icons/: MotorIcon.mo  Surface.mo  package.mo  package.order
Old/UWBody/Interfaces/: FlangeWithBearing.mo  FlangeWithBearingAdaptor.mo  Frame.mo  Frame_a.mo  Frame_b.mo  Frame_resolve.mo  PartialAbsoluteSensor.mo  PartialElementaryJoint.mo  PartialForce.mo  PartialLineForce.mo  PartialOneFrame_a.mo  PartialOneFrame_b.mo  PartialRelativeSensor.mo  PartialTwoFrames.mo  PartialTwoFramesDoubleSize.mo  PartialVisualizer.mo  ZeroPosition.mo  package.mo  package.order  partialColorMap.mo  partialGravityAcceleration.mo  partialSurfaceCharacteristic.mo
Old/UWBody/Joints/: Cylindrical.mo  FreeMotion.mo  FreeMotionScalarInit.mo  GearConstraint.mo  Planar.mo  Prismatic.mo  Revolute.mo  RevolutePlanarLoopConstraint.mo  RollingWheel.mo  RollingWheelSet.mo  Spherical.mo  SphericalSpherical.mo  Universal.mo  UniversalSpherical.mo  package.mo
Old/UWBody/Parts/: BevelGear1D.mo  Body.mo  BodyBox.mo  BodyCylinder.mo  BodyShape.mo  Fixed.mo  (+8 more)
Old/UWmBody/: UWWorld.mo  package.mo  package.order
Old/modelica_ext_func/: CMakeLists.txt
RBodyInFluid/: package.mo
RBodyInFluid/Fields/: WaterField.mo  package.mo
RBodyInFluid/Icons/: Field.mo  package.mo
RBodyInFluid/Interfaces/: package.mo  partialBuoyantForce.mo  partialViscousDrag.mo  partialViscousTorque.mo
RBodyInFluid/Parts/: BasicBody.mo  BasicBodyShape.mo  BasicPropMount.mo  package.mo
ROVm/: BasicTryROV.mo  package.mo  package.order
ROVm/Controllers/: ROVClientCall_Joystick.mo  ROVJoystickController.mo  package.mo
ROVm/Electronics/: package.mo  package.order
ROVm/Examples/: BasicBlueROV2.mo  BasicTryROV.mo  DataBasedBlueROV2.mo  DataBasedSimplifiedBlueROV2.mo  FullBlueROV2Example.mo  InputBasedBlueROV2.mo  ROSConnectedBlueROV2.mo  SimplifiedBlueROV2.mo  package.mo  package.order
ROVm/FrameBody/: package.mo  package.order
ROVm/Propeller/: package.mo  package.order
ROVm/Resources/: IN_OUT_LOG1.mat  IN_OUT_LOG10.mat  IN_OUT_LOG11.mat  IN_OUT_LOG12.mat  IN_OUT_LOG13.mat  IN_OUT_LOG14.mat  IN_OUT_LOG15.mat  IN_OUT_LOG16.mat  IN_OUT_LOG17.mat  IN_OUT_LOG2.mat  IN_OUT_LOG3.mat  IN_OUT_LOG4.mat  IN_OUT_LOG5.mat  IN_OUT_LOG6.mat  IN_OUT_LOG7.mat  IN_OUT_LOG8.mat  IN_OUT_LOG9.mat  RCOU_LOG1.mat  RCOU_LOG10.mat  RCOU_LOG11.mat  RCOU_LOG12.mat  RCOU_LOG13.mat  RCOU_LOG14.mat  RCOU_LOG15.mat  RCOU_LOG16.mat  RCOU_LOG17.mat  RCOU_LOG2.mat  RCOU_LOG3.mat  RCOU_LOG4.mat  RCOU_LOG5.mat  RCOU_LOG6.mat  RCOU_LOG7.mat  RCOU_LOG8.mat  RCOU_LOG9.mat  ROVClientCall_Joystick.c  inoutParser.m~  randA.mat  rcou_single_table.mat  rcou_tables.mat
ROVm/Templates/: BlueROV2Simplified.mo  BlueROV2Template.mo  package.mo  package.order
ROVm/TestBin/: BlueROV2ExtTest.mo  BlueROV2FrameTest.mo  BottomPlateTest.mo  PropMountTest.mo  PropellerTest.mo  SidePlateTest.mo  TopPlateTest.mo  VectorPropTest.mo  VectorPropTest1.mo  package.mo  package.order
UnderwaterRigidBodyLibrary/: package.mo  package.order
UnderwaterRigidBodyLibrary/Controllers/: ROSControllerBlock_Joy.mo  ROS_Controller_Joystick.mo  package.mo
UnderwaterRigidBodyLibrary/Fields/: WaterField.mo  package.mo  package.order
UnderwaterRigidBodyLibrary/Icons/: Field.mo  package.mo  package.order
UnderwaterRigidBodyLibrary/Interfaces/: PartialPropeller.mo  package.mo  package.order  partialBuoyantForce.mo  partialViscousDrag.mo  partialViscousTorque.mo
UnderwaterRigidBodyLibrary/Parts/: BasicBody.mo  BasicBodyShape.mo  package.mo
UnderwaterRigidBodyLibrary/Resources/: ROS_Controller_Joystick.c
modelica_ext_func/: CMakeLists.txt  package.xml
modelica_ext_func/launch/: rov_basic.launch
modelica_ext_func/scripts/: numservice.py  talker.py
modelica_ext_func/src/rov/: inet_socket_ROV_relay_joy.cpp  rov_joystick_basic_control.cpp  rov_joystick_tuned_control.cpp
modelica_ext_func/src/spring/: inet_socket_relay_joy_input.cpp
modelica_ext_func/src/spring/old/: inet_socket.cpp  inet_socket_relay.cpp  inet_socket_relay_array.cpp  modelica_controller.cpp  modelica_controller_array.cpp
modelica_ext_func/src/tut/: listener.cpp
(+852 files in other folders)
